--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   <p class="back">Click On Heart To See Magic</p>
 </div>
 
-<script src="untoldcoding.js"></script>
+<script src="tanu.js"></script>
 </body>
 </html>
