--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         But above all, I promise to love you fiercely and passionately, now and for all eternity. 
         You are my light, my love, and my everything, and I vow to spend the rest of my days making you happy.
         
-        Happy Promise Day, my love. Here's to a lifetime of love, laughter, and endless promises fulfilled.</p>
+        Happy Promise Day, my love. Here's to a lifetime of love, laughter, and endless promises fulfilled. Love you bccha 💗☃️🦋</p>
 
        <p><span class="main"> Your Love</span>
        </p> 
